--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,8 +37,10 @@
     <meta name="twitter:image" content="https://rugbyclaw.com/og-image.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23B5886A' rx='15' width='100' height='100'/><text x='50' y='68' font-family='sans-serif' font-size='45' font-weight='bold' text-anchor='middle' fill='white'>RC</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23B5886A' rx='15' width='100' height='100'/><text x='50' y='68' font-family='sans-serif' font-size='45' font-weight='bold' text-anchor='middle' fill='white'>RC</text></svg>">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
