Add Privacy Policy, Terms of Use, and update nav to match main site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -466,6 +466,8 @@
                 <a href="https://www.npmjs.com/package/rugbyclaw" rel="noopener">npm</a>
                 <a href="https://x.com/pocarles" rel="noopener">Twitter</a>
                 <a href="https://api-sports.io" rel="noopener">Data: API-Sports</a>
+                <a href="/privacy">Privacy</a>
+                <a href="/terms">Terms</a>
             </nav>
             <p class="footer-credit">Built by <a href="https://pocarles.com" rel="author">Pierre-Olivier Carles</a></p>
         </div>
